@@ -1,3 +1,8 @@
+2003-01-31 Peter Bienstman  <Peter.Bienstman@rug.ac.be>
+
+	* planar.h: Add field plot.
+	* planar.cpp: Ditto.
+
 2002-11-08 Peter Bienstman  <Peter.Bienstman@rug.ac.be>
 
 	* planar.h: Warn if wavelength not set.
